# native_audio_player

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  android_native_audio.cpp
android/src/main/cpp/internal/: AudioDataProvider.cpp  AudioDataProvider.h  AudioDataProviderHelper.cpp  AudioDataProviderHelper.h  AudioStreamCallBackImpl.cpp  AudioStreamCallBackImpl.h  MP3AudioDataProvider.cpp  MP3AudioDataProvider.h
android/src/main/kotlin/com/rgpro/native_audio_player/: NativeAudioItf.kt  NativeAudioPlayerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/rgpro/native_audio_player_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: native_audio_player.podspec
ios/Classes/: NativeAudioPlayerPlugin.h  NativeAudioPlayerPlugin.m  SwiftNativeAudioPlayerPlugin.swift
lib/: native_audio_player.dart
test/: native_audio_player_test.dart
